--- a/src/components/SceneInfoPanel/SceneInfoPanel.module.scss
+++ b/src/components/SceneInfoPanel/SceneInfoPanel.module.scss
@@ -1,3 +1,24 @@
+@import "../../scss/variables";
+@import "../../scss/mixins";
+
 .SceneInfoPanel {
   display: flex;
+  flex-direction: column;
+  padding: $spacer;
+
+  .studio-logo {
+    display: flex;
+    justify-content: center;
+    margin-bottom: $spacer;
+
+    img {
+      max-height: 8rem;
+      max-width: 100%;
+    }
+
+    .studio-name {
+      @include h5;
+      font-style: italic;
+    }
+  }
 }
