--- a/src/components/SceneInfoPanel/SceneInfoPanel.module.scss
+++ b/src/components/SceneInfoPanel/SceneInfoPanel.module.scss
@@ -42,8 +42,9 @@
         margin-bottom: 0;
 
         img {
-          max-width: 6rem;
+          width: 6rem;
           margin-right: $spacer;
+          margin-bottom: 0;
         }
       }
     }
