--- a/src/App.scss
+++ b/src/App.scss
@@ -40,3 +40,9 @@
 .read-the-docs {
   color: #888;
 }
+
+/* ----------------------------------------- Stash Reels ---------------------------------------- */
+
+.sr-only {
+  @include visually-hidden;
+}
