--- a/src/scss/_stash-theme.scss
+++ b/src/scss/_stash-theme.scss
@@ -37,6 +37,7 @@ $card-cap-bg: rgba(#000, 0.03);
 @import "bootstrap/scss/mixins.scss";
 @import "bootstrap/scss/root.scss";
 @import "bootstrap/scss/reboot.scss";
+@import "bootstrap/scss/buttons.scss";
 /* stylelint-enable */
 
 $red1: #a82a2a;
