Minimal input button state and styling

--- a/src/components/Buttons/MiniButtons/MiniButton.module.scss
+++ b/src/components/Buttons/MiniButtons/MiniButton.module.scss
@@ -5,7 +5,7 @@
 @import "../../../scss/mixins";
 
 .MiniButton {
-  @include button;
+  @include button-accessible;
   @include button-minimal;
   display: inline-flex;
   flex-wrap: nowrap;
