--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -12,8 +12,7 @@
   transition: none;
 }
 
-@mixin button {
-  // Minimal accessibility
+@mixin button-accessible {
   min-height: 44px;
   min-width: 44px;
 }
