--- a/src/components/SceneInfoPanel/SceneInfoPanel.module.scss
+++ b/src/components/SceneInfoPanel/SceneInfoPanel.module.scss
@@ -32,7 +32,7 @@
   .stats {
     display: flex;
     list-style: none;
-    margin-top: $spacer;
+    margin-top: 2px;
     margin-bottom: 0;
     padding-left: 0;
     gap: math.div($spacer, 2);
