--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@use "./scss/stash-theme" as theme;
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -44,5 +46,5 @@
 /* ----------------------------------------- Stash Reels ---------------------------------------- */
 
 .sr-only {
-  @include visually-hidden;
+  @include theme.visually-hidden;
 }
